Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6204

couchdb (mapreduce NIF) doesn't compile with GCC 4.6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 2.0
    • view-engine
    • Security Level: Public
    • None
    • GCC 4.6 on Debian testing

    Description

      The mapreduce NIF of couchdb can't be build with the following error:

      In file included from mapreduce_nif.cc:34:0:
      mapreduce.h:108:13: error: 'ptrdiff_t' does not name a type
      In file included from /usr/include/c++/4.6/string:54:0,
      from /usr/include/c++/4.6/bits/locale_classes.h:42,
      from /usr/include/c++/4.6/bits/ios_base.h:43,
      from /usr/include/c++/4.6/ios:43,
      from /usr/include/c++/4.6/ostream:40,
      from /usr/include/c++/4.6/iostream:40,
      from mapreduce_nif.cc:19

      The reason is that GCC 4.6 got stricter about errors, see more at https://wiki.ubuntu.com/GCC4.6

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vmx Volker Mische
            vmx Volker Mische
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty