MB-6204: Fix build issue with GCC-4.6

The error checking in GCC-4.6 got stricter, which lead
to the error:
error: 'ptrdiff_t' does not name a type

To fix this issue, just include <cstddef>.

Change-Id: Iffd67fd5db1a4265007ea6b87f2e6e8a4724c107
Reviewed-on: http://review.couchbase.org/19554
Tested-by: Filipe David Borba Manana <fdmanana@gmail.com>
Reviewed-by: Filipe David Borba Manana <fdmanana@gmail.com>